Fix version display text alignment

--- a/OS/wwwroot-dev/sass/server/components/_footer.sass
+++ b/OS/wwwroot-dev/sass/server/components/_footer.sass
@@ -7,6 +7,7 @@
         width: 100%
         small
             text-align: center
+            width: inherit
 @include media-breakpoint-up(sm) // [768px] Larger Than Small
 @include media-breakpoint-up(md) // [992px] Larger Than Medium
     #footer
